# playground-github

./: .markdownlint.json  .mypy.ini  AGENTS.md  HOWTO.md  Pipfile  README.md  mypy.ini  pyproject.toml
.gemini/: settings.json
.github/workflows/: check-markdown.yml  check-python.yml
bruno/GitHub/: .env.example  .gitignore  Get PRs review comments.bru  Get review comments.bru  List issue comments.bru  List repositories.bru  List review comments on a pull request.bru  Search PRs.bru  collection.bru
bruno/GitHub/environments/: Tot org.bru
graphql/: queries.graphql
graphql_client/: closed_or_merged_pull_requests_with_review_comments.py  custom_fields.py  custom_mutations.py  custom_typing_fields.py  enums.py  input_types.py  organisation_repositories.py
src/: generate_report.py  get_comments.py  get_pr.py  get_pr_metrics.py  list_repositories.py
src/client/: GitHubClient.py  list_pull_requests_with_comments.py  list_repositories.py
src/client/graphql/: __init__.py  client.py  enums.py  input_types.py
src/domain/: Comment.py  PullRequest.py  User.py  pullrequest.py  repository.py  user.py
src/playgroundgithub/client/: GitHubClient.py
src/playgroundgithub/domain/: Comment.py  PullRequest.py  PullRequestAnalysis.py  PullRequestComment.py  PullRequestMetrics.py  PullRequestSummary.py  PullRequestUrl.py  User.py
src/playgroundgithub/service/: AnalysisReporter.py  PullRequestAnalyzer.py
tests/domain/: test_PullRequestAnalysis.py  test_PullRequestMetrics.py  test_PullRequestSummary.py  test_PullRequestUrl.py
tests/service/: test_PullRequestAnalyzer.py
(+2 files in other folders)
